# obstagtools

./: .gitignore  README.md  add_tag.py  add_taxonomy.py  keywords_yake.py  metadata.yaml  mypy.ini  obs-add-tag.py  obs-add-taxonomy.py  obs-filter-vault.py  obs-prune-attach.py  obs_config.py  obs_document.py  obs_keywords_yake.py  obs_utilities.py  obs_vault.py  obsidian-filter-vault.py  pyproject.toml  test-semantic.md  test.md
testdata/: test-semantic.md  test-structure.md
testdata/Attachments/: baz.txt
testdata/testsubdir/: test3.md  test4.md
testdata/testsubdir/subsubdir/: test5.md  test5.nope  test6.md
tests/: test_obs_document.py  test_obs_utilities.py  test_obs_vault.py
