[tool.poetry]
name = "obstagtools"
version = "1.0.0"
description = "https://github.com/Jachimo/obstagtools"
authors = ["Jachimo <jachimo@noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
oyaml = "^1.0"
yake = "^0.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4.4"}
mypy = "^0.971"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
#fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
